pyinfra-debug.log
  File "/home/mohamed/.local/share/uv/tools/pyinfra/lib/python3.10/site-packages/pyinfra_cli/cli.py", line 243, in cli
    _main(*args, **kwargs)
  File "/home/mohamed/.local/share/uv/tools/pyinfra/lib/python3.10/site-packages/pyinfra_cli/cli.py", line 378, in _main
    can_diff, state, config = _handle_commands(
  File "/home/mohamed/.local/share/uv/tools/pyinfra/lib/python3.10/site-packages/pyinfra_cli/cli.py", line 705, in _handle_commands
    state, config, operations = _prepare_deploy_operations(state, config, operations)
  File "/home/mohamed/.local/share/uv/tools/pyinfra/lib/python3.10/site-packages/pyinfra_cli/cli.py", line 766, in _prepare_deploy_operations
    load_deploy_file(state, filename)
  File "/home/mohamed/.local/share/uv/tools/pyinfra/lib/python3.10/site-packages/pyinfra_cli/util.py", line 235, in load_deploy_file
    _parallel_load_hosts(state, lambda: exec_file(filename), filename)
  File "/home/mohamed/.local/share/uv/tools/pyinfra/lib/python3.10/site-packages/pyinfra_cli/util.py", line 229, in _parallel_load_hosts
    raise result
  File "/home/mohamed/.local/share/uv/tools/pyinfra/lib/python3.10/site-packages/pyinfra_cli/util.py", line 209, in load_file
    callback()
  File "/home/mohamed/.local/share/uv/tools/pyinfra/lib/python3.10/site-packages/pyinfra_cli/util.py", line 235, in <lambda>
    _parallel_load_hosts(state, lambda: exec_file(filename), filename)
  File "/home/mohamed/.local/share/uv/tools/pyinfra/lib/python3.10/site-packages/pyinfra_cli/util.py", line 57, in exec_file
    code = compile(code_str, filename, "exec")
  File "deploy.py", line 19
    name="Download the ClickHouse GPG key and store it in the keyring"
         ^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
